tools/tests/errors/surf_exc_03.ki
# catching a non-matching type lets the exception escape uncaught
try:
    throw "stringerror"
catch Integer as e:
    discard e
